--- a/test.html
+++ b/test.html
@@ -1,3 +1,11 @@
+<!DOCTYPE html>
 <html>
+  <head>
+    POKEDEX
+  </head>
+  <button>
+    <a href="pokeball.jpg" style="width: fit-content; height: fit-content;"
+      >POKEBALL</a
+    >
+  </button>
 </html>
-
