--- a/first.html
+++ b/first.html
@@ -4,9 +4,6 @@
     POKEDEX
   </head>
   <button>
-    <a href="pokeball.jpg" style="width: fit-content; height: fit-content;"
-      >POKEBALL</a
-    >
+    <a href="pokeball.jpg" style="width: 100%; height: 100%;">POKEBALL</a>
   </button>
 </html>
-
