--- a/first.html
+++ b/first.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <i>POKEDEX</i>
+    <b><i>POKEDEX</i></b>
   </head>
   <button>
     <a href="pokeball.jpg" style="width: 100%; height: 100%;">POKEBALL</a>
