--- a/first.html
+++ b/first.html
@@ -1,9 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+  <h1 style="text-align: center;">
     <b><i>POKEDEX</i></b>
-  </head>
-  <button>
-    <a href="pokeball.jpg" style="width: 100%; height: 100%;">POKEBALL</a>
-  </button>
+  </h1>
+  <br />
+  <p style="text-align: center;">
+    <button>
+      <a href="pokeball.jpg" style="width: fit-content; height: fit-content;"
+        >POKEBALL</a
+      >
+    </button>
+  </p>
+  
 </html>
