--- a/first.html
+++ b/first.html
@@ -4,12 +4,36 @@
     <b><i>POKEDEX</i></b>
   </h1>
   <br />
-  <p style="text-align: center;">
-    <button>
-      <a href="pokeball.jpg" style="width: fit-content; height: fit-content;"
+  <div style="text-align: center;">
+    <button style="align-self: center;">
+      <a
+        href="Pokemons/pokeball.jpg"
+        style="width: fit-content; height: fit-content;"
         >POKEBALL</a
       >
     </button>
-  </p>
-  
+  </div>
+
+  <h3>Gen6</h3>
+  <table>
+    <tr>
+      <th>Pokemon</th>
+      <th>Type</th>
+      <th>Picture</th>
+    </tr>
+    <tr>
+      <td>Turtwig</td>
+      <td style="color: green;">Grass</td>
+      <td>
+        <button><a href="Pokemons/turtwig.png">Click Me</a></button>
+      </td>
+    </tr>
+    <tr>
+      <td>Grotle</td>
+      <td style="color: green;">Grass</td>
+      <td>
+        <button><a href="Pokemons/grotle.jpg">Click Me</a></button>
+      </td>
+    </tr>
+  </table>
 </html>
