--- a/first.html
+++ b/first.html
@@ -1,39 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
+  <div style="text-align: center;">
+    <img src="Pokemons/LOGO.jpg" width="=50;" height="75;" />
+  </div>
   <h1 style="text-align: center;">
     <b><i>POKEDEX</i></b>
   </h1>
-  <br />
-  <div style="text-align: center;">
-    <button style="align-self: center;">
-      <a
-        href="Pokemons/pokeball.jpg"
-        style="width: fit-content; height: fit-content;"
-        >POKEBALL</a
-      >
-    </button>
-  </div>
-
-  <h3>Gen6</h3>
-  <table>
-    <tr>
-      <th>Pokemon</th>
-      <th>Type</th>
-      <th>Picture</th>
-    </tr>
-    <tr>
-      <td>Turtwig</td>
-      <td style="color: green;">Grass</td>
-      <td>
-        <button><a href="Pokemons/turtwig.png">Click Me</a></button>
-      </td>
-    </tr>
-    <tr>
-      <td>Grotle</td>
-      <td style="color: green;">Grass</td>
-      <td>
-        <button><a href="Pokemons/grotle.jpg">Click Me</a></button>
-      </td>
-    </tr>
-  </table>
+  <body>
+    <h3>Gen6</h3>
+    <table>
+      <tr>
+        <th>Pokemon</th>
+        <th>Type</th>
+        <th>Picture</th>
+      </tr>
+      <tr>
+        <td>Turtwig</td>
+        <td style="color: green;">Grass</td>
+        <td>
+          <button><a href="Pokemons/turtwig.png">Click Me</a></button>
+        </td>
+      </tr>
+      <tr>
+        <td>Grotle</td>
+        <td style="color: green;">Grass</td>
+        <td>
+          <button><a href="Pokemons/grotle.jpg">Click Me</a></button>
+        </td>
+      </tr>
+    </table>
+  </body>
 </html>
