--- a/Poke_Stats/grottle.html
+++ b/Poke_Stats/grottle.html
@@ -52,5 +52,5 @@
     </tbody>
   </table>
   <br />
-  <button><a href="/home.html">HOME</a></button>
+  <button><a href="../home.html">HOME</a></button>
 </html>
