--- a/Poke_Stats/torterra.html
+++ b/Poke_Stats/torterra.html
@@ -43,5 +43,5 @@
     </tbody>
   </table>
   <br />
-  <button><a href="/home.html">HOME</a></button>
+  <button><a href="../home.html">HOME</a></button>
 </html>
