--- a/Poke_Stats/turtwig.html
+++ b/Poke_Stats/turtwig.html
@@ -46,5 +46,5 @@
     </tbody>
   </table>
   <br />
-  <button><a href="/home.html">HOME</a></button>
+  <button><a href="../home.html">HOME</a></button>
 </html>
