--- a/Poke_Stats/chimchar.html
+++ b/Poke_Stats/chimchar.html
@@ -1,18 +1,14 @@
 <html>
   <title>
-    Torterra
+    Chimchar
   </title>
   <style>
     body {
-      background-image: linear-gradient(
-        90deg,
-        rgb(40, 218, 40) 50%,
-        rgba(192, 119, 11, 0.897) 50%
-      );
+      background-image: linear-gradient(rgb(250, 137, 9), rgb(250, 137, 9));
     }
   </style>
-  <h2>Torterra</h2>
-  <img src="Poke_IMG/torterra.png" alt="Torterra" width="300" height="250" />
+  <h2>Chimchar</h2>
+  <img src="Poke_IMG/chimchar.png" alt="Chimchar" width="300" height="250" />
   <br />
   <h4>STATS</h4>
   <table width="100%" border="1">
@@ -26,12 +22,12 @@
     </thead>
     <tbody align="center">
       <tr>
-        <td>55</td>
-        <td>68</td>
-        <td>64</td>
-        <td>31</td>
-        <td>45</td>
-        <td>55</td>
+        <td>44</td>
+        <td>58</td>
+        <td>44</td>
+        <td>61</td>
+        <td>58</td>
+        <td>44</td>
       </tr>
     </tbody>
   </table>
@@ -43,14 +39,14 @@
     </thead>
     <tbody align="center">
       <tr>
+        <td>NONE</td>
         <td>
-          <a href="grottle.html">Grottle</a><br /><img
-            src="Poke_IMG/grotle.png"
-            width="80"
+          <a href="monferno.html">Monferno</a><br /><img
+            src="Poke_IMG/monferno.png"
             height="75"
+            width="80"
           />
         </td>
-        <td>NONE</td>
       </tr>
     </tbody>
   </table>
