--- a/Poke_Stats/grottle.html
+++ b/Poke_Stats/grottle.html
@@ -2,8 +2,13 @@
   <title>
     Grotle
   </title>
-  <h2 style="color: green;">Turtwig</h2>
-  <img src="Poke_IMG/grotle.jpg" alt="Grotle" width="300" height="250" />
+  <style>
+    body {
+      background-image: linear-gradient(rgb(40, 218, 40), rgb(40, 218, 40));
+    }
+  </style>
+  <h2>Turtwig</h2>
+  <img src="Poke_IMG/grotle.png" alt="Grotle" width="300" height="250" />
   <br />
   <h4>STATS</h4>
   <table width="100%" border="1">
@@ -37,15 +42,15 @@
         <td>
           <a href="turtwig.html">Turtwig</a><br /><img
             src="Poke_IMG/turtwig.png"
-            width="50"
-            height="50"
+            width="80"
+            height="75"
           />
         </td>
         <td>
           <a href="torterra.html">Torterra</a><br /><img
-            src="Poke_IMG/torterra.jpg"
-            width="50"
-            height="50"
+            src="Poke_IMG/torterra.png"
+            width="80"
+            height="75"
           />
         </td>
       </tr>
