--- a/Poke_Stats/monferno.html
+++ b/Poke_Stats/monferno.html
@@ -1,18 +1,14 @@
 <html>
   <title>
-    Torterra
+    Monferno
   </title>
   <style>
     body {
-      background-image: linear-gradient(
-        90deg,
-        rgb(40, 218, 40) 50%,
-        rgba(192, 119, 11, 0.897) 50%
-      );
+      background-image: linear-gradient(90deg, rgb(250, 137, 9) 50%, brown 50%);
     }
   </style>
-  <h2>Torterra</h2>
-  <img src="Poke_IMG/torterra.png" alt="Torterra" width="300" height="250" />
+  <h2>Monferno</h2>
+  <img src="Poke_IMG/monferno.png" alt="Monferno" width="300" height="250" />
   <br />
   <h4>STATS</h4>
   <table width="100%" border="1">
@@ -26,12 +22,12 @@
     </thead>
     <tbody align="center">
       <tr>
-        <td>55</td>
-        <td>68</td>
         <td>64</td>
-        <td>31</td>
-        <td>45</td>
-        <td>55</td>
+        <td>78</td>
+        <td>52</td>
+        <td>81</td>
+        <td>78</td>
+        <td>52</td>
       </tr>
     </tbody>
   </table>
@@ -44,13 +40,19 @@
     <tbody align="center">
       <tr>
         <td>
-          <a href="grottle.html">Grottle</a><br /><img
-            src="Poke_IMG/grotle.png"
+          <a href="chimchar.html">Chimchar</a><br /><img
+            src="Poke_IMG/chimchar.png"
             width="80"
             height="75"
           />
         </td>
-        <td>NONE</td>
+        <td>
+          <a href="infernape.html">Infernape</a><br /><img
+            src="Poke_IMG/infernape.png"
+            width="80"
+            height="75"
+          />
+        </td>
       </tr>
     </tbody>
   </table>
