--- a/Poke_Stats/turtwig.html
+++ b/Poke_Stats/turtwig.html
@@ -2,7 +2,12 @@
   <title>
     Turtwig
   </title>
-  <h2 style="color: green;">Turtwig</h2>
+  <style>
+    body {
+      background-image: linear-gradient(rgb(40, 218, 40), rgb(40, 218, 40));
+    }
+  </style>
+  <h2>Turtwig</h2>
   <img src="Poke_IMG/turtwig.png" alt="Turtwig" width="300" height="250" />
   <br />
   <h4>STATS</h4>
@@ -37,9 +42,9 @@
         <td>NONE</td>
         <td>
           <a href="grottle.html">Grottle</a><br /><img
-            src="Poke_IMG/grotle.jpg"
-            height="50"
-            width="50"
+            src="Poke_IMG/grotle.png"
+            height="75"
+            width="80"
           />
         </td>
       </tr>
