--- a/Poke_Stats/infernape.html
+++ b/Poke_Stats/infernape.html
@@ -1,18 +1,14 @@
 <html>
   <title>
-    Torterra
+    Infernape
   </title>
   <style>
     body {
-      background-image: linear-gradient(
-        90deg,
-        rgb(40, 218, 40) 50%,
-        rgba(192, 119, 11, 0.897) 50%
-      );
+      background-image: linear-gradient(90deg, rgb(250, 137, 9) 50%, brown 50%);
     }
   </style>
-  <h2>Torterra</h2>
-  <img src="Poke_IMG/torterra.png" alt="Torterra" width="300" height="250" />
+  <h2>Infernape</h2>
+  <img src="Poke_IMG/infernape.png" alt="Infernape" width="300" height="250" />
   <br />
   <h4>STATS</h4>
   <table width="100%" border="1">
@@ -26,12 +22,12 @@
     </thead>
     <tbody align="center">
       <tr>
-        <td>55</td>
-        <td>68</td>
-        <td>64</td>
-        <td>31</td>
-        <td>45</td>
-        <td>55</td>
+        <td>76</td>
+        <td>104</td>
+        <td>71</td>
+        <td>108</td>
+        <td>104</td>
+        <td>71</td>
       </tr>
     </tbody>
   </table>
@@ -44,8 +40,8 @@
     <tbody align="center">
       <tr>
         <td>
-          <a href="grottle.html">Grottle</a><br /><img
-            src="Poke_IMG/grotle.png"
+          <a href="monferno.html">Monferno</a><br /><img
+            src="Poke_IMG/monferno.png"
             width="80"
             height="75"
           />
