--- a/home.html
+++ b/home.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
   <div style="text-align: center;">
-    <img src="Poke_Stats/Poke_IMG/LOGO.jpg" width="=100;" height="75;" />
+    <img src="Poke_Stats/Poke_IMG/LOGO.png" width="=100;" height="75;" />
   </div>
   <h1 style="text-align: center;">
     <b><i>POKEDEX</i></b>
   </h1>
+
   <body>
-    <h2>6th Generation</h2>
+    <h2>4th Generation</h2>
     <table border="1;" width="100%">
       <thead>
         <tr horizontal align="center">
@@ -18,8 +19,8 @@
         </tr>
       </thead>
 
-      <tbody>
-        <tr horizontal align="center">
+      <tbody horizontal align="center">
+        <tr>
           <td>Turtwig</td>
           <td style="color: green;">Grass</td>
           <td>
@@ -35,12 +36,13 @@
             </button>
           </td>
         </tr>
-        <tr horizontal align="center">
+
+        <tr>
           <td>Grotle</td>
           <td style="color: green;">Grass</td>
           <td>
             <img
-              src="Poke_Stats/Poke_IMG/grotle.jpg"
+              src="Poke_Stats/Poke_IMG/grotle.png"
               height="100;"
               width="120;"
             />
@@ -51,17 +53,18 @@
             </button>
           </td>
         </tr>
-        <tr horizontal align="center">
+
+        <tr>
           <td>Torterra</td>
           <td>
             <span style="color: green;">Grass</span><br /><span
-              style="color: chocolate;"
+              style="color: rgba(192, 119, 11, 0.897);"
               >Rock</span
             >
           </td>
           <td>
             <img
-              src="Poke_Stats/Poke_IMG/torterra.jpg"
+              src="Poke_Stats/Poke_IMG/torterra.png"
               height="100;"
               width="120;"
             />
@@ -69,6 +72,67 @@
           <td>
             <button>
               <a href="Poke_Stats/grottle.html">Click Me For STATS</a>
+            </button>
+          </td>
+        </tr>
+
+        <tr>
+          <td>Chimchar</td>
+          <td style="color: rgb(250, 137, 9);">Fire</td>
+          <td>
+            <img
+              src="Poke_Stats/Poke_IMG/chimchar.png"
+              height="100;"
+              width="120;"
+            />
+          </td>
+          <td>
+            <button>
+              <a href="Poke_Stats/chimchar.html">Click Me For STATS</a>
+            </button>
+          </td>
+        </tr>
+
+        <tr>
+          <td>Monferno</td>
+          <td>
+            <span style="color: rgb(250, 137, 9);">Fire</span><br /><span
+              style="color: brown;"
+              >Fighting</span
+            >
+          </td>
+          <td>
+            <img
+              src="Poke_Stats/Poke_IMG/monferno.png"
+              height="100;"
+              width="120;"
+            />
+          </td>
+          <td>
+            <button>
+              <a href="Poke_Stats/monferno.html">Click Me For STATS</a>
+            </button>
+          </td>
+        </tr>
+
+        <tr>
+          <td>Infernape</td>
+          <td>
+            <span style="color: rgb(250, 137, 9);">Fire</span><br /><span
+              style="color: brown;"
+              >Fighting</span
+            >
+          </td>
+          <td>
+            <img
+              src="Poke_Stats/Poke_IMG/infernape.png"
+              height="100;"
+              width="120;"
+            />
+          </td>
+          <td>
+            <button>
+              <a href="Poke_Stats/infernape.html">Click Me For STATS</a>
             </button>
           </td>
         </tr>
