--- a/Poke_Stats/empoleon.html
+++ b/Poke_Stats/empoleon.html
@@ -1,6 +1,6 @@
 <html>
   <title>
-    Infernape
+    Empoleon
   </title>
 
   <head>
@@ -18,26 +18,25 @@
   </div>
 
   <style>
-    .bg{
-      background-image: linear-gradient(90deg, rgb(250, 137, 9) 50%, brown 50%);
+    .bg {
+      background-image: linear-gradient(90deg, rgb(92, 168, 255) 50%, grey 50%);
       text-align: center;
     }
   </style>
 
   <div class="bg">
-    <h2>Infernape</h2>
-    <img src="Poke_IMG/infernape.png" alt="Infernape" width="300" height="250" />
+    <h2>Empoleon</h2>
+    <img src="Poke_IMG/empoleon.png" alt="Empoleon" width="300" height="250" />
   </div>
   <div class="type">
     <ul>
       <h4>Types</h4>
-      <li class="fire">Fire</li>
-      <li class="fighting">Fighting</li>
+      <li class="water">Water</li>
+      <li class="steel">Steel</li>
     </ul>
   </div>
-
   <table width="100%" border="1">
-    <thead style="background-color: rgb(250, 137, 9);">
+    <thead style="background-color: rgb(92, 168, 255);">
       <th>HP</th>
       <th>Attack</th>
       <th>Defence</th>
@@ -47,12 +46,12 @@
     </thead>
     <tbody align="center">
       <tr>
-        <td>76</td>
-        <td>104</td>
-        <td>71</td>
-        <td>108</td>
-        <td>104</td>
-        <td>71</td>
+        <td>84</td>
+        <td>86</td>
+        <td>88</td>
+        <td>60</td>
+        <td>111</td>
+        <td>101</td>
       </tr>
     </tbody>
   </table>
@@ -65,8 +64,8 @@
     <tbody align="center">
       <tr>
         <td>
-          <a href="monferno.html">Monferno</a><br /><img
-            src="Poke_IMG/monferno.png"
+          <a href="prinplup.html">Prinplup</a><br /><img
+            src="Poke_IMG/prinplup.png"
             width="80"
             height="75"
           />
