--- a/Poke_Stats/prinplup.html
+++ b/Poke_Stats/prinplup.html
@@ -1,6 +1,6 @@
 <html>
   <title>
-    Infernape
+    Prinplup
   </title>
 
   <head>
@@ -14,30 +14,39 @@
       height="150"
       class="pokeball"
     />
-    <img src="Poke_IMG/LOGO.png" width="=300;" height="150;" class="logo" />
-  </div>
-
+    <img
+      src="Poke_IMG/LOGO.png"
+      width="=300;"
+      height="150;"
+      class="logo"
+    />
+</div>
+  
   <style>
-    .bg{
-      background-image: linear-gradient(90deg, rgb(250, 137, 9) 50%, brown 50%);
+    .bg {
+      background-color: rgb(92, 168, 255);
       text-align: center;
     }
-  </style>
+    </style>
 
   <div class="bg">
-    <h2>Infernape</h2>
-    <img src="Poke_IMG/infernape.png" alt="Infernape" width="300" height="250" />
+    <h2>Prinplup</h2>
+    <img
+      src="Poke_IMG/prinplup.png"
+      alt="Prinplup"
+      width="300"
+      height="250"
+    />
   </div>
   <div class="type">
     <ul>
       <h4>Types</h4>
-      <li class="fire">Fire</li>
-      <li class="fighting">Fighting</li>
+      <li class="water">Water</li>
     </ul>
   </div>
 
   <table width="100%" border="1">
-    <thead style="background-color: rgb(250, 137, 9);">
+    <thead style="background-color: rgb(92, 168, 255);">
       <th>HP</th>
       <th>Attack</th>
       <th>Defence</th>
@@ -47,12 +56,12 @@
     </thead>
     <tbody align="center">
       <tr>
+        <td>64</td>
+        <td>66</td>
+        <td>68</td>
+        <td>50</td>
+        <td>81</td>
         <td>76</td>
-        <td>104</td>
-        <td>71</td>
-        <td>108</td>
-        <td>104</td>
-        <td>71</td>
       </tr>
     </tbody>
   </table>
@@ -64,14 +73,18 @@
     </thead>
     <tbody align="center">
       <tr>
-        <td>
-          <a href="monferno.html">Monferno</a><br /><img
-            src="Poke_IMG/monferno.png"
-            width="80"
+          <td>
+            <a href="piplup.html">Piplup<br /><img
+              src="Poke_IMG/piplup.png"
+              height="75"
+              width="80"
+            />
+          </td>
+        <td><a href="empoleon.html">Empoleon<br /><img
+            src="Poke_IMG/empoleon.png"
             height="75"
-          />
-        </td>
-        <td>NONE</td>
+            width="80"
+          /></td>
       </tr>
     </tbody>
   </table>
