--- a/Poke_Stats/monferno.html
+++ b/Poke_Stats/monferno.html
@@ -2,17 +2,47 @@
   <title>
     Monferno
   </title>
+
+  <head>
+    <link rel="stylesheet" href="../styles.css" />
+  </head>
+
+  <div style="text-align: center;">
+    <img
+      src="Poke_IMG/pokeball.png"
+      width="150"
+      height="150"
+      class="pokeball"
+    />
+    <img
+      src="Poke_IMG/LOGO.png"
+      width="=300;"
+      height="150;"
+      class="logo"
+    />
+  </div>
+
   <style>
-    body {
+    .bg{
       background-image: linear-gradient(90deg, rgb(250, 137, 9) 50%, brown 50%);
+      text-align: center;
     }
   </style>
-  <h2>Monferno</h2>
-  <img src="Poke_IMG/monferno.png" alt="Monferno" width="300" height="250" />
-  <br />
-  <h4>STATS</h4>
+
+  <div class="bg">
+    <h2>Monferno</h2>
+    <img src="Poke_IMG/monferno.png" alt="Monferno" width="300" height="250" />
+  </div>
+  <div class="type">
+    <ul>
+      <h4>Types</h4>
+      <li class="fire">Fire</li>
+      <li class="fighting">Fighting</li>
+    </ul>
+  </div>
+
   <table width="100%" border="1">
-    <thead>
+    <thead style="background-color: rgb(250, 137, 9);">
       <th>HP</th>
       <th>Attack</th>
       <th>Defence</th>
