--- a/Poke_Stats/piplup.html
+++ b/Poke_Stats/piplup.html
@@ -1,34 +1,37 @@
 <html>
   <title>
-    Chimchar
+    Piplup
   </title>
-
   <head>
-    <link rel="stylesheet" href="../styles.css" />
-  </head>
-
-  <div style="text-align: center;">
-    <img
-      src="Poke_IMG/pokeball.png"
-      width="150"
-      height="150"
-      class="pokeball"
-    />
-    <img src="Poke_IMG/LOGO.png" width="=300;" height="150;" class="logo" />
-  </div>
-
+      <link rel="stylesheet" href="../styles.css" />
+    </head>
+   <div style="text-align: center;">
+        <img
+          src="Poke_IMG/pokeball.png"
+          width="150"
+          height="150"
+          class="pokeball"
+        />
+        <img
+          src="Poke_IMG/LOGO.png"
+          width="=300;"
+          height="150;"
+          class="logo"
+        />
+   </div>
+   
   <style>
     .bg {
-      background-image: linear-gradient(rgb(250, 137, 9), rgb(250, 137, 9));
+      background-color: rgb(92, 168, 255);
       text-align: center;
     }
-  </style>
+    </style>
 
   <div class="bg">
-    <h2>Chimchar</h2>
+    <h2>Piplup</h2>
     <img
-      src="Poke_IMG/chimchar.png"
-      alt="Chimchar"
+      src="Poke_IMG/piplup.png"
+      alt="Piplup"
       width="300"
       height="250"
     />
@@ -36,12 +39,12 @@
   <div class="type">
     <ul>
       <h4>Types</h4>
-      <li class="fire">Fire</li>
+      <li class="water">Water</li>
     </ul>
   </div>
 
   <table width="100%" border="1">
-    <thead style="background-color: rgb(250, 137, 9);">
+    <thead style="background-color: rgb(92, 168, 255);">
       <th>HP</th>
       <th>Attack</th>
       <th>Defence</th>
@@ -51,12 +54,12 @@
     </thead>
     <tbody align="center">
       <tr>
-        <td>44</td>
-        <td>58</td>
-        <td>44</td>
+        <td>53</td>
+        <td>51</td>
+        <td>53</td>
+        <td>40</td>
         <td>61</td>
-        <td>58</td>
-        <td>44</td>
+        <td>56</td>
       </tr>
     </tbody>
   </table>
@@ -70,8 +73,8 @@
       <tr>
         <td>NONE</td>
         <td>
-          <a href="monferno.html">Monferno</a><br /><img
-            src="Poke_IMG/monferno.png"
+          <a href="prinplup.html">Prinplup<br /><img
+            src="Poke_IMG/prinplup.png"
             height="75"
             width="80"
           />
