--- a/Poke_Stats/torterra.html
+++ b/Poke_Stats/torterra.html
@@ -2,21 +2,47 @@
   <title>
     Torterra
   </title>
+
+  <head>
+    <link rel="stylesheet" href="../styles.css" />
+  </head>
+
+  <div style="text-align: center;">
+    <img
+      src="Poke_IMG/pokeball.png"
+      width="150"
+      height="150"
+      class="pokeball"
+    />
+    <img src="Poke_IMG/LOGO.png" width="=300;" height="150;" class="logo" />
+  </div>
+
   <style>
-    body {
+    .bg {
       background-image: linear-gradient(
         90deg,
         rgb(40, 218, 40) 50%,
         rgba(192, 119, 11, 0.897) 50%
       );
+      text-align: center;
     }
   </style>
-  <h2>Torterra</h2>
-  <img src="Poke_IMG/torterra.png" alt="Torterra" width="300" height="250" />
-  <br />
-  <h4>STATS</h4>
+
+  <div class="bg">
+    <h2>Torterra</h2>
+    <img src="Poke_IMG/torterra.png" alt="Torterra" width="300" height="250" />
+  </div>
+
+  <div>
+    <ul>
+      <h4>Types</h4>
+      <li class="grass">Grass</li>
+      <li class="rock">Rock</li>
+    </ul>
+  </div>
+
   <table width="100%" border="1">
-    <thead>
+    <thead style="background-color: rgb(40, 218, 40);">
       <th>HP</th>
       <th>Attack</th>
       <th>Defence</th>
@@ -26,12 +52,12 @@
     </thead>
     <tbody align="center">
       <tr>
-        <td>55</td>
-        <td>68</td>
-        <td>64</td>
-        <td>31</td>
-        <td>45</td>
-        <td>55</td>
+        <td>95</td>
+        <td>109</td>
+        <td>105</td>
+        <td>56</td>
+        <td>75</td>
+        <td>85</td>
       </tr>
     </tbody>
   </table>
