--- a/home.html
+++ b/home.html
@@ -3,6 +3,9 @@
   <head>
     <link rel="stylesheet" href="styles.css" />
   </head>
+  <marquee dir="left"
+    ><b><i>Website under development</i></b></marquee
+  >
   <div style="text-align: center;">
     <img
       src="Poke_Stats/Poke_IMG/pokeball.png"
