--- a/Poke_Stats/chimchar.html
+++ b/Poke_Stats/chimchar.html
@@ -6,6 +6,10 @@
   <head>
     <link rel="stylesheet" href="../styles.css" />
   </head>
+  
+  <marquee dir="left"
+    ><b><i>Website under development</i></b></marquee
+  >
 
   <div style="text-align: center;">
     <img
