--- a/Poke_Stats/piplup.html
+++ b/Poke_Stats/piplup.html
@@ -5,6 +5,11 @@
   <head>
       <link rel="stylesheet" href="../styles.css" />
     </head>
+
+    <marquee dir="left"
+    ><b><i>Website under development</i></b></marquee
+  >
+  
    <div style="text-align: center;">
         <img
           src="Poke_IMG/pokeball.png"
@@ -19,7 +24,7 @@
           class="logo"
         />
    </div>
-   
+ 
   <style>
     .bg {
       background-color: rgb(92, 168, 255);
