--- a/Poke_Stats/piplup.html
+++ b/Poke_Stats/piplup.html
@@ -9,7 +9,7 @@
     <marquee dir="left"
     ><b><i>Website under development</i></b></marquee
   >
-  
+
    <div style="text-align: center;">
         <img
           src="Poke_IMG/pokeball.png"
@@ -88,5 +88,5 @@
     </tbody>
   </table>
   <br />
-  <button><a href="../home.html">HOME</a></button>
+  <button><a href="../index.html">HOME</a></button>
 </html>
