--- a/Poke_Stats/torterra.html
+++ b/Poke_Stats/torterra.html
@@ -85,5 +85,5 @@
     </tbody>
   </table>
   <br />
-  <button><a href="../home.html">HOME</a></button>
+  <button><a href="../index.html">HOME</a></button>
 </html>
