--- a/Poke_Stats/chimchar.html
+++ b/Poke_Stats/chimchar.html
@@ -6,7 +6,7 @@
   <head>
     <link rel="stylesheet" href="../styles.css" />
   </head>
-  
+
   <marquee dir="left"
     ><b><i>Website under development</i></b></marquee
   >
@@ -84,5 +84,5 @@
     </tbody>
   </table>
   <br />
-  <button><a href="../home.html">HOME</a></button>
+  <button><a href="../index.html">HOME</a></button>
 </html>
