--- a/Poke_Stats/grottle.html
+++ b/Poke_Stats/grottle.html
@@ -89,5 +89,5 @@
   </table>
 
   <br />
-  <button><a href="../home.html">HOME</a></button>
+  <button><a href="../index.html">HOME</a></button>
 </html>
