--- a/Poke_Stats/monferno.html
+++ b/Poke_Stats/monferno.html
@@ -91,5 +91,5 @@
     </tbody>
   </table>
   <br />
-  <button><a href="../home.html">HOME</a></button>
+  <button><a href="../index.html">HOME</a></button>
 </html>
