--- a/Poke_Stats/prinplup.html
+++ b/Poke_Stats/prinplup.html
@@ -93,5 +93,5 @@
     </tbody>
   </table>
   <br />
-  <button><a href="../home.html">HOME</a></button>
+  <button><a href="../index.html">HOME</a></button>
 </html>
