--- a/Poke_Stats/turtwig.html
+++ b/Poke_Stats/turtwig.html
@@ -79,5 +79,5 @@
     </tbody>
   </table>
   <br />
-  <button><a href="../home.html">HOME</a></button>
+  <button><a href="../index.html">HOME</a></button>
 </html>
